--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,19 @@
     </properties>
 
     <dependencies>
+        <!-- Apache Commons -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.0</version>
+        </dependency>
+
         <!-- Dependencies used in test classes only -->
         <dependency>
             <groupId>junit</groupId>
